force-app/main/default/objects/Task_Platform_Event__e/Task_Platform_Event__e.object-meta.xml
<CustomObject>
    <description>Insert the tasks</description>
    <label>Task Platform Event</label>
    <pluralLabel>Task Platform Events</pluralLabel>
</CustomObject>