force-app/main/default/objects/Task_Platform_Event__e/fields/ActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ActivityDate__c</fullName>
    <label>ActivityDate</label>
    <type>Date</type>
</CustomField>