force-app/main/default/objects/Task_Platform_Event__e/fields/Planned_Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Planned_Task_Id__c</fullName>
    <label>Planned Task Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>