force-app/main/default/objects/Task_Platform_Event__e/fields/RecordTypeId__c.field-meta.xml
<CustomField>
    <fullName>RecordTypeId__c</fullName>
    <label>RecordTypeId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>