force-app/main/default/objects/Task_Platform_Event__e/fields/WhatId__c.field-meta.xml
<CustomField>
    <fullName>WhatId__c</fullName>
    <label>WhatId</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>